--- a/index.html
+++ b/index.html
@@ -14,63 +14,79 @@
     <label for="player_name">Who are you?</label>
     <button id="player-start">Begin!</button>
     
-    <section>
+    <section id="start-game">
         <!-- <img src="text" alt="text"/> Need to add images/media to each turn/page/scene -->
-        <div class="turn" id="1">
+        <div class="turn" id="turn-0">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice1">text</button>
             <button id="choice2">text</button>
+        <!-- Starting page, perhaps redirected from landing page -->
         </div>
-        <div class="turn" id="2">
+
+        <div class="turn" id="turn-1">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice3">text</button>
             <button id="choice4">text</button>
         </div>
-        <div class="turn" id="3">
+
+        <div class="turn" id="turn-2">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice5">text</button>
             <button id="choice6">text</button>
         </div>
+
         <div class="turn" id="4">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice7">text</button>
             <button id="choice8">text</button>
         </div>
+
         <div class="turn" id="5">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice9">text</button>
             <button id="choice10">text</button>
         </div>
+
         <div class="turn" id="6">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice11">text</button>
             <button id="choice12">text</button>
         </div>
+
         <div class="turn" id="7">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice13">text</button>
             <button id="choice14">text</button>
         </div>
+
         <div class="turn" id="8">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice15">text</button>
             <button id="choice16">text</button>
         </div>
+
         <div class="turn" id="9">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice17">text</button>
             <button id="choice18">text</button>
         </div>
+
         <div class="turn" id="10">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
             <button id="choice19">text</button>
             <button id="choice20">text</button>
         </div>
+
         <div class="turn" id="11"></div>
+
         <div class="turn" id="12"></div>
+
         <div class="turn" id="13"></div>
+
         <div class="turn" id="14"></div>
+
         <div class="turn" id="15"></div>
+
     </section>
 
     <button id="oops">Try again?</button> 
