--- a/index.html
+++ b/index.html
@@ -18,74 +18,86 @@
         <!-- <img src="text" alt="text"/> Need to add images/media to each turn/page/scene -->
         <div class="turn" id="turn-0">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice1">text</button>
-            <button id="choice2">text</button>
+            <button id="choice1">move to turn-1</button>
+            <button id="choice2">move to turn-2</button>
         <!-- Starting page, perhaps redirected from landing page -->
         </div>
 
         <div class="turn" id="turn-1">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice3">text</button>
-            <button id="choice4">text</button>
+            <button id="choice3">move to turn-3</button>
+            <button id="choice4">move to turn-4</button>
         </div>
 
         <div class="turn" id="turn-2">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice5">text</button>
-            <button id="choice6">text</button>
+            <button id="choice5">move to turn-5</button>
+            <button id="choice6">move to turn-6</button>
         </div>
 
-        <div class="turn" id="4">
+        <div class="turn" id="turn-3">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice7">text</button>
-            <button id="choice8">text</button>
+            <button id="choice7">move to turn-7</button>
+            <button id="choice8">move to turn-8</button>
         </div>
 
-        <div class="turn" id="5">
+        <div class="turn" id="turn-4">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice9">text</button>
-            <button id="choice10">text</button>
+            <button id="choice9">move to turn-9</button>
+            <button id="choice10">move to turn-10</button>
         </div>
 
-        <div class="turn" id="6">
+        <div class="turn" id="turn-5">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice11">text</button>
-            <button id="choice12">text</button>
+            <button id="choice11">move to turn-11</button>
+            <button id="choice12">move to turn-12</button>
         </div>
 
-        <div class="turn" id="7">
+        <div class="turn" id="turn-6">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice13">text</button>
-            <button id="choice14">text</button>
+            <button id="choice13">move to turn-13</button>
+            <button id="choice14">move to turn-14</button>
         </div>
 
-        <div class="turn" id="8">
+        <div class="turn" id="turn-7">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice15">text</button>
-            <button id="choice16">text</button>
+            <button id="choice15">move to turn-15</button>
+            <button id="choice16">move to turn-16</button>
         </div>
 
-        <div class="turn" id="9">
+        <div class="turn" id="turn-8">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice17">text</button>
-            <button id="choice18">text</button>
+            <button id="choice17">move to turn-17</button>
+            <button id="choice18">move to turn-18</button>
         </div>
 
-        <div class="turn" id="10">
+        <div class="turn" id="turn-9">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <button id="choice19">text</button>
-            <button id="choice20">text</button>
+            <button id="choice19">move to turn-19</button>
+            <button id="choice20">move to turn-20</button>
         </div>
 
-        <div class="turn" id="11"></div>
+        <div class="turn" id="turn-10"></div>
 
-        <div class="turn" id="12"></div>
+        <div class="turn" id="turn-11"></div>
 
-        <div class="turn" id="13"></div>
+        <div class="turn" id="turn-12"></div>
 
-        <div class="turn" id="14"></div>
+        <div class="turn" id="turn-13"></div>
 
-        <div class="turn" id="15"></div>
+        <div class="turn" id="turn-14"></div>
+
+        <div class="turn" id="turn-15"></div>
+
+        <div class="turn" id="turn-16"></div>
+
+        <div class="turn" id="turn-17"></div>
+
+        <div class="turn" id="turn-18"></div>
+
+        <div class="turn" id="turn-19"></div>
+
+        <div class="turn" id="turn-20"></div>
 
     </section>
 
