--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     
     <section>
         <div id="landing">
-            <p>[Hello there and here's what this page is about]<!-- [Welcome & Instructions] --></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa doloremque soluta ut saepe eveniet a excepturi eaque nulla esse quod earum consequuntur optio? Consequatur odit sapiente sint et debitis?<!-- [Welcome & Instructions] --></p>
             <!-- Image -->
             <input id="player-name" type="text"></input>
-            <label for="player-name" id="field">Who are you?</label>
+            <label for="player-name" id="button-label">Who are you?</label>
             <button id="player-start">Begin!</button>
         </div>
     
