--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="start-game">
         <div class="turn" id="turn-0">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <input id="player-name" type="text" value="What is your name?"></input>
+            <input id="player-name" type="text" placeholder="What is your name?"></input>
             <label for="player-name" id="button-label"></label>
             <button class="turn-btn" id="1">move to turn-1</button>
             <button class="turn-btn" id="2">move to turn-2</button>
