adds a function, updates event listeners, updates html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./scripts/app.js"></script>
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Rescue the fraidy wizard!</title>
+    <title>Choose your own adventure</title>
 </head>
 <body>
-    <h1>[Heading]</h1>
+    <h1>Help a wizard in need</h1>
     
     <!-- <section>
         <div id="turn-0">
@@ -22,7 +22,7 @@
     <section id="start-game">
         <div class="turn" id="turn-0">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias non minima. Aspernatur nostrum facere doloremque repellat labore quo distinctio cum consequuntur quidem sed consequatur itaque odit, repellendus magni odio!</p>
-            <input id="player-name" type="text" placeholder="What is your name?"></input>
+            <input id="player-name" type="text" placeholder="What's your name?"></input>
             <label for="player-name" id="button-label"></label>
             <button class="turn-btn" id="1">move to turn-1</button>
             <button class="turn-btn" id="2">move to turn-2</button>
