--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,67 +13,81 @@
     
     <section id="start-game">
         <div class="turn" id="turn-0">
+            <img src="" alt="">
             <p>Text for #turn-0</p>
-            <!-- <input id="player-name" type="text" placeholder="What's your name?"></input>
-            <label for="player-name" id="button-label"></label> -->
-            <button class="turn-btn 1">move to turn-1</button>
-            <button class="turn-btn 2">move to turn-2</button>
+            <div class="btn-container">
+                <button class="turn-btn 1">move to turn-1</button>
+                <button class="turn-btn 2">move to turn-2</button>
+            </div>
         </div>
 
         <div class="turn" id="turn-1">
+            <img src="" alt="">
             <p>Text for #turn-1</p>
-            <button class="turn-btn 3">move to turn-3</button>
-            <button class="turn-btn 4">move to turn-4</button>
+            <div class="btn-container">
+                <button class="turn-btn 3">move to turn-3</button>
+                <button class="turn-btn 4">move to turn-4</button>
+            </div>
         </div>
 
         <div class="turn" id="turn-2">
+            <img src="" alt="">
             <p>Text for #turn-2</p>
-            <button class="turn-btn 3">move to turn-3</button>
-            <button class="turn-btn 4">move to turn-4</button>
+            <div class="btn-container">
+                <button class="turn-btn 3">move to turn-3</button>
+                <button class="turn-btn 4">move to turn-4</button>
+            </div>
         </div>
 
         <div class="turn" id="turn-3">
+            <img src="" alt="">
             <p>Text for #turn-3, coin flip</p>
             <button id="flip-btn">Flip a coin</button>
-            <!-- <button class="turn-btn" id="7">move to turn-7</button>
-            <button class="turn-btn" id="8">move to turn-8</button> -->
         </div>
 
         <div class="turn" id="turn-4">
+            <img src="" alt="">
             <p>Text for #turn-4, Endpoint 1</p>
             <button class="restart">Restart?</button>
-            <!-- <button class="turn-btn" id="9">move to turn-9</button>
-            <button class="turn-btn" id="10">move to turn-10</button> -->
         </div>
 
         <div class="turn" id="turn-5">
+            <img src="" alt="">
             <p>Text for #turn-5, Heads on coinflip, Endpoint 2</p>
             <button class="restart">Restart?</button>
-            <!-- <button class="turn-btn" id="11">move to turn-11</button>
-            <button class="turn-btn" id="12">move to turn-12</button> -->
         </div>
 
         <div class="turn" id="turn-6">
+            <img src="" alt="">
             <p>Text for #turn-6, Tails on coin flip</p>
-            <button class="turn-btn 7">move to turn-7</button>
-            <button class="turn-btn 8">move to turn-8</button>
+            <div class="btn-container">
+                <button class="turn-btn 7">move to turn-7</button>
+                <button class="turn-btn 8">move to turn-8</button>
+            </div>
         </div>
 
         <div class="turn" id="turn-7">
+            <img src="" alt="">
             <p>Text for #turn-7, Endpoint 3</p>
             <button class="restart">Restart?</button>
-            <!-- <button class="turn-btn" id="15">move to turn-15</button>
-            <button class="turn-btn" id="16">move to turn-16</button> -->
         </div>
 
         <div class="turn" id="turn-8">
+            <img src="" alt="">
             <p>Text for #turn-8, Endpoint 4</p>
             <button class="restart">Restart?</button>
-            <!-- <button class="turn-btn" id="17">move to turn-17</button>
-            <button class="turn-btn" id="18">move to turn-18</button> -->
         </div>
 
     </section>
 
 </body>
 </html>
+
+<!-- Code graveyard -->
+
+<!-- <style>
+    body {
+        background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/a7/Kowloon_Walled_City_-_1989_Aerial.jpg" alt="Kowloon Walled City, 1989, aerial view");
+        background-repeat: no-repeat;
+    }
+</style> -->
