updates js, html, css to final project submission versions

--- a/index.html
+++ b/index.html
@@ -9,72 +9,69 @@
     <title>Choose your own adventure</title>
 </head>
 <body>
-    <h1>Help the stranded wizard</h1>
+    <h1>Help the stranded wizzard!</h1>
     
     <section id="start-game">
         <div class="turn" id="turn-0">
-            <img src="" alt="">
-            <p>Text for #turn-0</p>
+            <img src="https://images.pexels.com/photos/14866454/pexels-photo-14866454.jpeg" alt="Dense network of rooftops in an urban area">
+            <p>In a parallel reality, not too many nanometres away, there was once a wizard who got themselves stranded in a mystical dimension other than <a href="https://www.lspace.org/about/whatis-lspace.html">Library-space</a> or the Dungeon dimensions.<br><br> They had a hard time making sense of the structure they were in, and to this day, have remained within it, lost, bouncing off boundaries, and more than a bit dehydrated. <br><br> To you and me, this structure looks like the <a href="https://en.wikipedia.org/wiki/Kowloon_Walled_City">Kowloon Walled City</a> presented on a surreal-looking tablet in front of you, but to this being, their environment may as well have looked like blocks of code madly rushing around.<br><br> You now find yourself in possession of a choice, one of a precious few to come.<br><br></p>
             <div class="btn-container">
-                <button class="turn-btn 1">move to turn-1</button>
-                <button class="turn-btn 2">move to turn-2</button>
+                <button class="turn-btn 1">Examine the little entity.</button>
+                <button class="turn-btn 2">Examine the environment around the little being.</button>
             </div>
         </div>
 
         <div class="turn" id="turn-1">
-            <img src="" alt="">
-            <p>Text for #turn-1</p>
+            <p>A faded red robe wraps around this character in front of you with an air of restless energy and unbounded enthusiasm, supported by their excited addition of an extra 'Z' to the 'WIZZARD' hand-stitched across their very wizardly hat. <br><br>To you, Rincewind - for that was, is, and shall be their name - appears to possess an unreal and indefinable aura, akin to the magical equivalent of the number 'zero' - causing themselves to events along their path, leaving behind sheer, <a href="https://www.merriam-webster.com/dictionary/amorphic">amorphic</a> un-definition in their wake.<br><br>They seem harmless, though, and rather lost. "In need of help," you think to yourself, but then you remember: you've got that thing coming up on your device, and it somehow just cannot wait. You really, <em>really</em> need to get back to your other device to check this event out, and you feel your dopamine strongly endorse this course of action too.</p>
             <div class="btn-container">
-                <button class="turn-btn 3">move to turn-3</button>
-                <button class="turn-btn 4">move to turn-4</button>
+                <button class="turn-btn 3">Aid Rincewind, however unhelpfully.</button>
+                <button class="turn-btn 4">You need to get to your favourite screen, ASAP.</button>
             </div>
         </div>
 
         <div class="turn" id="turn-2">
-            <img src="" alt="">
-            <p>Text for #turn-2</p>
+            <p>You see blocks of tall, densely-packed, concrete structures surrounding Rincewind. As a matter of fact, this brings to mind your experience of the videogame <a href="https://annapurnainteractive.com/en/games/stray"><em>Stray</em></a>, and its haunted environment of a million absent beings seen through the eyes of a ginger cat.<br><br> This makes you wonder, now... do you decide to peer into this pocket of untethered reality and lend a helping click, or do you courageously look away in search of your favourite gaming device?</p>
             <div class="btn-container">
-                <button class="turn-btn 3">move to turn-3</button>
-                <button class="turn-btn 4">move to turn-4</button>
+                <button class="turn-btn 3">I'll have a look-in, poor fella.</button>
+                <button class="turn-btn 4"><em>Stray</em> calls out to me from the depths of my being.</button>
             </div>
         </div>
 
         <div class="turn" id="turn-3">
-            <img src="" alt="">
-            <p>Text for #turn-3, coin flip</p>
-            <button id="flip-btn">Flip a coin</button>
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWF3dmxrdjRyb3VpcHI3ZThqbWVxZ3p4cHY0aGNvYzM2enJldmxtZSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/a8TIlyVS7JixO/giphy.gif" alt="Coin spinning on table">
+            <p>As you move closer to the tablet of Rincewind's environment, you notice them stop and pick something up. It appears to be metallic and round, a currency of some sort.<br><br> Rincewind appears to consider it briefly and is about to pocket it when they suddenly hear something and look upwards - sounds that you are able to hear too. A sound of things clicking together, at each other, away from each other. As this slowly fades, a repeated metallic twang reverberates, a ghostly remnant harmonising with the invisible clicks from earlier.<br><br> You hear laughter and clinking. A vision opens up in front of Rincewind, two portals side-by-side.<br><br> You see Rincewind thoughtfully scratch their nose, pick out the coin in their pocket after a few failed attempts, and pause, looking around as if for inspiration. You think to yourself, "Surely, that certainly sounded like a set of die, a flipped coin, and glasses of wine being raised in toast?" <br><br>You look at the coin in Rincewind's hand and pick one up yourself. You seem to have misplaced your die set.</p> 
+            <button id="flip-btn">Flip your coin!</button>
         </div>
 
         <div class="turn" id="turn-4">
-            <img src="" alt="">
-            <p>Text for #turn-4, Endpoint 1</p>
+            <img src="https://images.pexels.com/photos/33997096/pexels-photo-33997096.jpeg" alt="Coin emblazoned with the text Game Over">
+            <p>Well, now. I suppose the pull of a dopamine drip was far too much when packaged to industrial strength. By the time you're back, the tablet has locked itself and you can't get back to Rincewind because the tablet they're on is an iPad. Once locked, you need its password and no amount of hand-wringing for poor Rincewind's fate can make it otherwise.<br><br> Rincewind is forever stuck, along this branch of reality at least. Will you, however, soon feel like a -</p>
             <button class="restart">Restart?</button>
         </div>
 
         <div class="turn" id="turn-5">
-            <img src="" alt="">
-            <p>Text for #turn-5, Heads on coinflip, Endpoint 2</p>
-            <button class="restart">Restart?</button>
+            <img src="https://cdn.pixabay.com/photo/2015/10/12/20/45/confetti-985152_1280.jpg" alt="Confetti falling">
+            <p>You turn up Heads. Within the tablet's environment, you see Rincewind straighten their back, looking a bit more confident, and march themselves off into the left-handside portal.<br><br>Confetti rains from the celing - both the tablet environment's as well as your very own ceiling. "I haven't even had a party to go along with this mess,"" you think to yourself, as Rincewind winks out of existence, jumping for what clearly is joy.<br><br>You've definitely reached this branch's end.</p>
+            <button class="restart">Find another Rincewind?</button>
         </div>
 
         <div class="turn" id="turn-6">
-            <img src="" alt="">
-            <p>Text for #turn-6, Tails on coin flip</p>
+            <p>Your coin lands on Tails. You look up to see Rincewind stride confidently towards the right-handside portal, pause at a few steps away from its edge, and poke a now-quivering nose into it.<br><br>They vanish in a flash of bright light and reappear exactly as they was, perched on hesitant tiptoe, nose leading the way. Only now, they are instead at the mouth of a large, yawning cave.<br><br>A faint, rhythmic rumbling seems to emanate from within, followed by a thin stream of smoke. Rincewind mutters to themselves, "I hate appearing around dragons... is this for what I failed my degree?" and shuffles listlessly forward.<br><br>You wince at their odd phrasing and think to yourself, "They appear to have a few outstanding issues with dragons, hmm." They pull a heavy-looking box out of yet another of their pockets, helpfully labelled "Atchoo".<br><br>They seem to be considering using the fine powder within - their reverie's suddenly interrupted by a stream of flame hissing out of the cave. Quietitude seemingly abounds. Quick, what do you think Rincewind should do now?</p>
             <div class="btn-container">
-                <button class="turn-btn 7">move to turn-7</button>
-                <button class="turn-btn 8">move to turn-8</button>
+                <button class="turn-btn 7">Distract the dragon with a sneezing fit?</button>
+                <button class="turn-btn 8">Knock the dragon out with the box?</button>
             </div>
         </div>
 
         <div class="turn" id="turn-7">
-            <img src="" alt="">
-            <p>Text for #turn-7, Endpoint 3</p>
-            <button class="restart">Restart?</button>
+            <img src="https://images.pexels.com/photos/33997096/pexels-photo-33997096.jpeg" alt="Coin emblazoned with the text Game Over">
+            <p>You use the bag of sneezing powder on the dragon, thoroughly distracting it by sending it into a sneezing fit. The tablet brightens up as Rincewind unfortunately gets burnt to a crisp in the resulting inferno.<br><br>Oops. Try to avoid helping them again?</p>
+            <button class="restart">Give yourself a fresh crack at it anyway?</button>
         </div>
 
         <div class="turn" id="turn-8">
-            <img src="" alt="">
-            <p>Text for #turn-8, Endpoint 4</p>
+            <img src="https://cdnb.artstation.com/p/assets/images/images/056/999/259/large/rachel-tan-4.jpg" alt="Treasure chest surrounded by piles of gold coins">
+            <p>"I really hope your throwing arm is good," you whisper as Rincewind aims the heavy-looking box at the dragon. <br><br> They throw the bag confidently and powerfully, missing the dragon by a wide margin and hitting a stalactite on the roof. It proceeds to fall and crush the dragon, allowing Rincewind to walk forth with confidence undeserved, gather the vast riches laying about, and proceed very linearly to what appears to be the way out.<br><br>You breathe a sigh of relief, as the tablet fades away from existence and is replaced by a long stream of credits. You wait through it, hoping for an end-credits scene about Rincewind's future.<br><br>None appear. At least, you think, I've got Rincewind to safety pending expansions.</p>
             <button class="restart">Restart?</button>
         </div>
 
@@ -83,11 +80,3 @@
 </body>
 </html>
 
-<!-- Code graveyard -->
-
-<!-- <style>
-    body {
-        background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/a7/Kowloon_Walled_City_-_1989_Aerial.jpg" alt="Kowloon Walled City, 1989, aerial view");
-        background-repeat: no-repeat;
-    }
-</style> -->
